--- a/Exercise_Files/Ch04/04_03/Start/styles.css
+++ b/Exercise_Files/Ch04/04_03/Start/styles.css
@@ -7,5 +7,18 @@ input, textarea, select {
 	box-sizing: border-box;
 }
 input[type="text"], input[type="url"], input[type="email"], input[type="tel"], input[type="password"], input[type="search"], input[type="number"], input[type="date"], input[type="time"], textarea {
+	width: 12em;
+	padding: 5px;
+	margin: 10px 10px 10px 0px;
+	border-radius: 7px;
+	background-color: lightpink;
+}
 
+input[type="url"] {
+	width: 20em;
+
+}
+
+textarea {
+	vertical-align: middle;
 }
